Increased the height and width of the spill placement buttons in the spill form's map modal, issue #623

--- a/css/less/skin.less
+++ b/css/less/skin.less
@@ -2863,8 +2863,8 @@ nav.navbar{
                     font-weight: bold;
                     text-decoration: none;
                     text-align: center;
-                    height: 1.375em;
-                    width: 1.375em;
+                    height: 2em;
+                    width: 2em;
                     line-height: .4em;
                     background-color: #7b98bc;
                     background-color: rgba(0,60,136,0.5);
